compiler/test/fail/variable_not_defined.js
// a is not declared.

print(a);
